--- a/backend/backend-farm/build.gradle
+++ b/backend/backend-farm/build.gradle
@@ -25,6 +25,12 @@ dependencies {
 	// mongodb
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:3.2.2'
 
+	// QueryDSL
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
@@ -33,6 +39,11 @@ dependencies {
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.3.0'
 
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
+}
+
+// gradle clean 시에 QClass 디렉토리 삭제
+clean {
+	delete file('src/main/generated')
 }
 
 tasks.named('test') {
