--- a/backend/backend-farm/build.gradle
+++ b/backend/backend-farm/build.gradle
@@ -39,6 +39,10 @@ dependencies {
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.3.0'
 
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
+
+	// Spring Cloud Starter OpenFeign
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.1'
+
 }
 
 // gradle clean 시에 QClass 디렉토리 삭제
