--- a/backend/backend-farm/build.gradle
+++ b/backend/backend-farm/build.gradle
@@ -45,6 +45,11 @@ dependencies {
 
 }
 
+// MongoDB 파라미터 이름 못찾는 에러 해결
+compileJava {
+	options.compilerArgs << '-parameters'
+}
+
 // gradle clean 시에 QClass 디렉토리 삭제
 clean {
 	delete file('src/main/generated')
